2005-04-05  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc, MirrorJob.h: add --loop option.

2005-04-04  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h, buffer.cc, buffer.h: (SetErrorCached) new method.
	* commands.cc: don't quote lftp -c argument when it is single.
	* FileCopy.cc, Fish.cc, FtpDirList.cc, HttpDir.cc, LsCache.cc, LsCache.h,
	  NetAccess.cc, SFtp.cc: add negative cache support.
	* Http.cc: set use-propfind and use-mkcol when those methods are unsupported.

2005-04-01  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: re-request missed data (could happen when file is growing).

2005-03-29  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc, HttpDir.h, HttpDirXML.cc: parse invalid XML as html,
	  this works around some servers that return plain index for PROPFIND.

2005-03-28  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: interpret the rest of line after lftp -c as command.
	* Http.cc, HttpDir.cc, HttpDir.h, HttpDirXML.cc: use USE_EXPAT define.

2005-03-24  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDirXML.cc: fixed coredump when there is no files; added
	  handler for creator-displayname; check parent node for href.

2005-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* buffer.cc: prevent spinning when disk is full in IOBufferFDStream;
	  better saving of errno.
	* Filter.cc, Filter.h: allow passing errno value to MakeErrorText.

2005-03-11  Alexander V. Lukyanov <lav@yars.free.net>

	* HttpDir.cc: extract listing info for HttpListInfo.

2005-03-09  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopyFtp.cc, ftpclass.h: handle timeout when waiting for ack.
	* misc.cc: (strip_trailing_slashes) don't strip last slash in root directory.

2005-03-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: don't strip trailing slash in OptimizePath.
	* Http.cc: send full URL in Destination header; fix Done for a number
	  of methods.